Prepare Static Files

--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,8 @@ ipython_config.py
 .DS_Store
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
-
+src/staticfiles/vendors
+local-cdn/
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
