--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ ipython_config.py
 .pdm-python
 .pdm-build/
 .DS_Store
+saas/
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 src/staticfiles/vendors
